package src.behavioral.state;

public interface MobileAlertState {
    void alert(MobileAlertStateContext context);
}
